[project]
name = "mcp_planio"
version = "0.1.0"
description = "An MCP enabled Plan.IO reader"
authors = [
  { name = "David Poole", email = "david.poole@safeswisscloud.ch" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["httpx", "mcp"]

[project.scripts]
mcp_planio = "mcp_planio:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["mcp_planio.py"]
